[package]
name = "bubble-bath"
version = "0.1.2"
edition = "2021"
description = "Small and quick HTML sanitizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aumetra/bubble-bath"

# crates.io-relevant fields
categories = ["text-processing", "web-programming"]
exclude = [".github", ".vscode", "benches/*.txt", "examples", "fuzz", "tests"]
keywords = ["html", "sanitization", "security", "xss"]

[[bench]]
name = "ammonia_intro"
harness = false

[[bench]]
name = "rustlang_website"
harness = false

[[bench]]
name = "wikipedia"
harness = false

[dependencies]
ahash = "0.8.11"
bytecount = "0.6.7"
lol_html = "1.2.0"
once_cell = "1.19.0"
slab = "0.4.9"
thiserror = "1.0.57"

[features]
default = ["simd"]
# Enables the `lol_html` `debug_trace` feature. Do not use in production!
debug_trace = ["lol_html/debug_trace"]
# Enables SIMD acceleration for some operations we have to perform
simd = ["bytecount/runtime-dispatch-simd"]

[dev-dependencies]
ammonia = "3.3.0"
criterion = "0.5.1"
insta = { version = "1.36.1", features = ["glob"] }
